Added figure creation and saving to allen atlas comparison

--- a/src/atlas/notebooks/allen.atlas.comparison.ipynb
+++ b/src/atlas/notebooks/allen.atlas.comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(dtype('uint16'), (456, 320, 528))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "allen_path = os.path.join(atlaspath, 'allen_25um_sagittal_reference.tif')\n",
     "allen_img = io.imread(allen_path)\n",
@@ -39,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,14 +127,71 @@
     "    title += f'y distance={round(ydistance,2)} um\\n'\n",
     "    title += f'z distance={round(zdistance,2)} um'\n",
     "    plt.title(title)\n",
-    "    plt.scatter(x1, y1, s=100, marker='^', c='b', label=str('Allen'))\n",
-    "    plt.scatter(x2, y2, s=100, marker='o', c='g', label=str('Atlas'))\n",
+    "    plt.scatter(x1, y1, s=100, marker='^', c='b', label=str('Allen ' + structure))\n",
+    "    plt.scatter(x2, y2, s=100, marker='o', c='g', label=str('Atlas ' + structure))\n",
     "    plt.imshow(slice, cmap='gray')\n",
     "    plt.legend()\n",
     "    \n",
     "    plt.close()\n",
     "    outpath = os.path.join(distancepath, f'{structure}.png')\n",
     "    fig.savefig(outpath, bbox_inches=\"tight\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tr><td><img src=\"https://www.brainsharer.org/images/3N_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/3N_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/4N_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/4N_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/5N_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/5N_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/6N_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/6N_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/7N_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/7N_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/7n_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/7n_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/AP.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/Amb_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/Amb_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/DC_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/DC_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/IC.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/LC_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/LC_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/LRt_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/LRt_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/PBG_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/PBG_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/RtTg.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/SC.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/SNC_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/SNC_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/SNR_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/SNR_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/Sp5C_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/Sp5I_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/Sp5I_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/Sp5O_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/Sp5O_R.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/VLL_L.png\"></td> </tr\n",
+      "<tr><td><img src=\"https://www.brainsharer.org/images/VLL_R.png\"></td> </tr\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (i1,row1), (i2,row2) in zip(df_midbrain_allen.iterrows(), df_midbrain_atlas.iterrows() ): \n",
+    "    structure1 = row1['Structure']\n",
+    "    structure2 = row2['Structure']\n",
+    "    assert structure1 == structure2\n",
+    "    print(f'<tr><td><img src=\"https://www.brainsharer.org/images/{structure1}.png\"></td> </tr')\n"
    ]
   },
   {
@@ -138,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
