--- a/src/atlas/notebooks/allen.atlas.comparison.ipynb
+++ b/src/atlas/notebooks/allen.atlas.comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_distance(com1, com2):\n",
+    "    return (np.linalg.norm(com1 - com2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,128 +81,291 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for (i1,row1), (i2,row2) in zip(df_midbrain_allen.iterrows(), df_midbrain_atlas.iterrows() ): \n",
-    "    structure = row1['Structure']\n",
-    "    if 'SC' in structure:\n",
-    "        x1 = row1['X'] // 25\n",
-    "        y1 = row1['Y'] // 25\n",
-    "        z1 = int(row1['Z'] // 25)\n",
-    "        x2 = row2['X'] // 25\n",
-    "        y2 = row2['Y'] // 25\n",
-    "        z2 = int(row2['Z'] // 25)\n",
-    "        xdistance = abs(row1['X'] - row2['X'])\n",
-    "        ydistance = abs(row1['Y'] - row2['Y'])\n",
-    "        zdistance = abs(row1['Z'] - row2['Z'])\n",
-    "        slice = sagittal[:,:,z1]\n",
-    "        title = f'{structure} at z={z1}\\n'\n",
-    "        title += f'x distance={round(xdistance,2)} um\\n'\n",
-    "        title += f'y distance={round(ydistance,2)} um\\n'\n",
-    "        title += f'z distance={round(zdistance,2)} um'\n",
-    "        plt.title(title)\n",
-    "        plt.scatter(x1, y1, s=100, marker='^', c='b', label=str('Allen'))\n",
-    "        plt.scatter(x2, y2, s=100, marker='o', c='g', label=str('Atlas'))\n",
-    "        plt.imshow(slice, cmap='gray')\n",
-    "        plt.legend()\n",
-    "        fig = plt.gcf()\n",
-    "        fig.set_size_inches(18.5, 10.5)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "distances = []\n",
+    "sortme = {}\n",
+    "\n",
     "for (i1,row1), (i2,row2) in zip(df_midbrain_allen.iterrows(), df_midbrain_atlas.iterrows() ): \n",
     "    structure = row1['Structure']\n",
     "\n",
     "    fig = plt.figure()\n",
     "    plt.rcParams[\"figure.figsize\"] = [10, 6]\n",
-    "    x1 = row1['X'] // 25\n",
-    "    y1 = row1['Y'] // 25\n",
-    "    z1 = int(row1['Z'] // 25)\n",
-    "    x2 = row2['X'] // 25\n",
-    "    y2 = row2['Y'] // 25\n",
-    "    z2 = int(row2['Z'] // 25)\n",
-    "    xdistance = abs(row1['X'] - row2['X'])\n",
-    "    ydistance = abs(row1['Y'] - row2['Y'])\n",
-    "    zdistance = abs(row1['Z'] - row2['Z'])\n",
-    "    slice = sagittal[:,:,z1]\n",
-    "    title = f'{structure} at z={z1}\\n'\n",
+    "    x1 = row1['X']\n",
+    "    y1 = row1['Y']\n",
+    "    z1 = row1['Z']\n",
+    "    x2 = row2['X']\n",
+    "    y2 = row2['Y']\n",
+    "    z2 = row2['Z']\n",
+    "    section = int(round(z1/25, 2))\n",
+    "    xdistance = abs(x1 - x2)\n",
+    "    ydistance = abs(y1 - y2)\n",
+    "    zdistance = abs(z1 - z2)\n",
+    "    distance = calculate_distance(np.array([x1,y1,z1]), np.array([x2,y2,z2]))\n",
+    "    slice = sagittal[:,:,section]\n",
+    "    title = f'{structure} at section={section}\\n'\n",
     "    title += f'x distance={round(xdistance,2)} um\\n'\n",
     "    title += f'y distance={round(ydistance,2)} um\\n'\n",
-    "    title += f'z distance={round(zdistance,2)} um'\n",
+    "    title += f'z distance={round(zdistance,2)} um\\n'\n",
+    "    title += f'  distance={round(distance,2)} um'\n",
     "    plt.title(title)\n",
-    "    plt.scatter(x1, y1, s=100, marker='^', c='b', label=str('Allen ' + structure))\n",
-    "    plt.scatter(x2, y2, s=100, marker='o', c='g', label=str('Atlas ' + structure))\n",
+    "    plt.scatter(x1/25, y1/25, s=80, marker='^', c='b', label=str('Allen ' + structure))\n",
+    "    plt.scatter(x2/25, y2/25, s=80, marker='o', c='g', label=str('Atlas ' + structure))\n",
     "    plt.imshow(slice, cmap='gray')\n",
     "    plt.legend()\n",
-    "    \n",
     "    plt.close()\n",
     "    outpath = os.path.join(distancepath, f'{structure}.png')\n",
+    "    fig.savefig(outpath, bbox_inches=\"tight\")\n",
+    "    distances.append(distance)\n",
+    "    sortme[structure] = distance\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.25])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "width = 0.25  # the width of the bars\n",
+    "multiplier = 0\n",
+    "x = np.arange(1) \n",
+    "x + width"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "errors = ['X error', 'Y error', 'Z error', 'Distance error']\n",
+    "x = np.arange(len(errors))  # the label locations\n",
+    "width = 0.35  # the width of the bars\n",
+    "for (i1,row1), (i2,row2) in zip(df_midbrain_allen.iterrows(), df_midbrain_atlas.iterrows() ): \n",
+    "    structure = row1['Structure']\n",
+    "    #fig = plt.figure()\n",
+    "    fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "    #plt.rcParams[\"figure.figsize\"] = [10, 6]\n",
+    "\n",
+    "    x1 = row1['X']\n",
+    "    y1 = row1['Y']\n",
+    "    z1 = row1['Z']\n",
+    "    x2 = row2['X']\n",
+    "    y2 = row2['Y']\n",
+    "    z2 = row2['Z']\n",
+    "    xdistance = abs(x1 - x2)\n",
+    "    ydistance = abs(y1 - y2)\n",
+    "    zdistance = abs(z1 - z2)\n",
+    "    distance = calculate_distance(np.array([x1,y1,z1]), np.array([x2,y2,z2]))\n",
+    "\n",
+    "    counts = [xdistance, ydistance, zdistance, distance]\n",
+    "    bar_labels = ['X error', 'Y error', 'Z error', 'Distance error']\n",
+    "    bar_colors = ['tab:red', 'tab:blue', 'tab:red', 'tab:orange']\n",
+    "    #ax.bar(errors, counts, label=bar_labels, color=bar_colors)\n",
+    "    ax.set_ylabel('Error in um')\n",
+    "    # Label with specially formatted floats\n",
+    "    rects1 = ax.bar(x - width/2, counts, label=bar_labels, color=bar_colors)\n",
+    "    ax.bar_label(rects1, padding=3)\n",
+    "    ax.set_xticks(x, errors)\n",
+    "    ax.set_title('Errors for ' + structure)\n",
+    "    ax.legend(title='Error color')\n",
+    "    plt.close()\n",
+    "    outpath = os.path.join(distancepath, f'{structure}_error.png')\n",
     "    fig.savefig(outpath, bbox_inches=\"tight\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<tr><td><img src=\"https://www.brainsharer.org/images/3N_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/3N_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/4N_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/4N_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/5N_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/5N_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/6N_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/6N_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/7N_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/7N_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/7n_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/7n_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/AP.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/Amb_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/Amb_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/DC_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/DC_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/IC.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/LC_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/LC_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/LRt_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/LRt_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/PBG_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/PBG_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/RtTg.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/SC.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/SNC_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/SNC_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/SNR_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/SNR_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/Sp5C_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/Sp5I_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/Sp5I_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/Sp5O_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/Sp5O_R.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/VLL_L.png\"></td> </tr\n",
-      "<tr><td><img src=\"https://www.brainsharer.org/images/VLL_R.png\"></td> </tr\n"
+      "n=37, min=98.23399070148605 max=1182.6365323228192, mean=443.2248796323675\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/PBG_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/PBG_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/IC.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/IC_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/SNC_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/SNC_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/4N_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/4N_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/SNR_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/SNR_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/LC_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/LC_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/LC_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/LC_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/3N_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/3N_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/SC.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/SC_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/4N_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/4N_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/PBG_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/PBG_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/3N_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/3N_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/SNR_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/SNR_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/VLL_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/VLL_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/SNC_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/SNC_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/7n_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/7n_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/5N_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/5N_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/RtTg.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/RtTg_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/5N_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/5N_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/6N_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/6N_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/6N_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/6N_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/7n_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/7n_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/VLL_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/VLL_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/DC_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/DC_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/DC_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/DC_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/Sp5O_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/Sp5O_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/Sp5O_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/Sp5O_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/AP.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/AP_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/7N_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/7N_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/Amb_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/Amb_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/Amb_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/Amb_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/Sp5I_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/Sp5I_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/LRt_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/LRt_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/Sp5I_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/Sp5I_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/Sp5C_L.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/Sp5C_L_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/LRt_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/LRt_R_error.png\"></td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/7N_R.png\"></td>\n",
+      "<td><img src=\"https://www.brainsharer.org/images/7N_R_error.png\"></td>\n",
+      "</tr>\n"
      ]
     }
    ],
    "source": [
-    "for (i1,row1), (i2,row2) in zip(df_midbrain_allen.iterrows(), df_midbrain_atlas.iterrows() ): \n",
-    "    structure1 = row1['Structure']\n",
-    "    structure2 = row2['Structure']\n",
-    "    assert structure1 == structure2\n",
-    "    print(f'<tr><td><img src=\"https://www.brainsharer.org/images/{structure1}.png\"></td> </tr')\n"
+    "print(f'n={len(distances)}, min={min(distances)} max={max(distances)}, mean={np.mean(distances)}')\n",
+    "ds = {k: v for k, v in sorted(sortme.items(), key=lambda item: item[1])}\n",
+    "for structure, d in ds.items():\n",
+    "    \n",
+    "    #print(f'{structure} distance from Allen={round(d,2)} micrometers')\n",
+    "    print('<tr>')\n",
+    "    print(f'<td><img src=\"https://www.brainsharer.org/images/{structure}.png\"></td>')\n",
+    "    print(f'<td><img src=\"https://www.brainsharer.org/images/{structure}_error.png\"></td>')\n",
+    "    print('</tr>')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -206,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +708,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
