Ready to test MD589 registration to Allen with points

--- a/src/atlas/notebooks/allen.atlas.comparison.ipynb
+++ b/src/atlas/notebooks/allen.atlas.comparison.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     "    structure = row1['Structure']\n",
     "\n",
     "    fig = plt.figure()\n",
-    "    plt.rcParams[\"figure.figsize\"] = [10, 6]\n",
+    "    plt.rcParams[\"figure.figsize\"] = [12, 8]\n",
     "    x1 = row1['X']\n",
     "    y1 = row1['Y']\n",
     "    z1 = row1['Z']\n",
@@ -111,8 +111,10 @@
     "    title += f'z distance={round(zdistance,2)} um\\n'\n",
     "    title += f'  distance={round(distance,2)} um'\n",
     "    plt.title(title)\n",
-    "    plt.scatter(x1/25, y1/25, s=80, marker='^', c='b', label=str('Allen ' + structure))\n",
-    "    plt.scatter(x2/25, y2/25, s=80, marker='o', c='g', label=str('Atlas ' + structure))\n",
+    "    ax = plt.gca()\n",
+    "    ax.set_xlim([300, 600])\n",
+    "    plt.scatter(x1/25, y1/25, s=20, marker='^', c='b', label=str('Allen ' + structure))\n",
+    "    plt.scatter(x2/25, y2/25, s=20, marker='o', c='g', label=str('Atlas ' + structure))\n",
     "    plt.imshow(slice, cmap='gray')\n",
     "    plt.legend()\n",
     "    plt.close()\n",
@@ -147,17 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "errors = ['X error', 'Y error', 'Z error', 'Distance error']\n",
     "x = np.arange(len(errors))  # the label locations\n",
-    "width = 0.35  # the width of the bars\n",
+    "width = 0.05  # the width of the bars\n",
     "for (i1,row1), (i2,row2) in zip(df_midbrain_allen.iterrows(), df_midbrain_atlas.iterrows() ): \n",
     "    structure = row1['Structure']\n",
     "    #fig = plt.figure()\n",
-    "    fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "    fig, ax = plt.subplots(figsize=(6, 4))\n",
     "    #plt.rcParams[\"figure.figsize\"] = [10, 6]\n",
     "\n",
     "    x1 = row1['X']\n",
@@ -173,15 +175,15 @@
     "\n",
     "    counts = [xdistance, ydistance, zdistance, distance]\n",
     "    bar_labels = ['X error', 'Y error', 'Z error', 'Distance error']\n",
-    "    bar_colors = ['tab:red', 'tab:blue', 'tab:red', 'tab:orange']\n",
+    "    bar_colors = ['tab:red', 'tab:blue', 'tab:green', 'tab:orange']\n",
     "    #ax.bar(errors, counts, label=bar_labels, color=bar_colors)\n",
     "    ax.set_ylabel('Error in um')\n",
     "    # Label with specially formatted floats\n",
     "    rects1 = ax.bar(x - width/2, counts, label=bar_labels, color=bar_colors)\n",
-    "    ax.bar_label(rects1, padding=3)\n",
+    "    ax.bar_label(rects1, padding=2)\n",
     "    ax.set_xticks(x, errors)\n",
     "    ax.set_title('Errors for ' + structure)\n",
-    "    ax.legend(title='Error color')\n",
+    "    #ax.legend(title='Error color')\n",
     "    plt.close()\n",
     "    outpath = os.path.join(distancepath, f'{structure}_error.png')\n",
     "    fig.savefig(outpath, bbox_inches=\"tight\")\n"
