Added point based to all parameter maps

--- a/src/atlas/notebooks/allen.atlas.comparison.ipynb
+++ b/src/atlas/notebooks/allen.atlas.comparison.ipynb
@@ -27,12 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "csvpath = '/net/birdstore/Active_Atlas_Data/data_root/atlas_data/atlasV8/csv'\n",
-    "distancepath = '/net/birdstore/Active_Atlas_Data/data_root/atlas_data/atlasV8/distance'\n",
+    "distancepath = '/net/birdstore/Active_Atlas_Data/data_root/atlas_data/atlasV8/distance/pdf'\n",
     "atlaspath = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration'"
    ]
   },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,12 +113,12 @@
     "    plt.title(title)\n",
     "    ax = plt.gca()\n",
     "    ax.set_xlim([300, 600])\n",
-    "    plt.scatter(x1/25, y1/25, s=20, marker='^', c='b', label=str('Allen ' + structure))\n",
-    "    plt.scatter(x2/25, y2/25, s=20, marker='o', c='g', label=str('Atlas ' + structure))\n",
+    "    plt.scatter(x1/25, y1/25, s=40, marker='^', c='b', label=str('Allen ' + structure))\n",
+    "    plt.scatter(x2/25, y2/25, s=40, marker='o', c='g', label=str('Atlas ' + structure))\n",
     "    plt.imshow(slice, cmap='gray')\n",
     "    plt.legend()\n",
     "    plt.close()\n",
-    "    outpath = os.path.join(distancepath, f'{structure}.png')\n",
+    "    outpath = os.path.join(distancepath, f'{structure}.pdf')\n",
     "    fig.savefig(outpath, bbox_inches=\"tight\")\n",
     "    distances.append(distance)\n",
     "    sortme[structure] = distance\n"
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,9 +183,10 @@
     "    ax.bar_label(rects1, padding=2)\n",
     "    ax.set_xticks(x, errors)\n",
     "    ax.set_title('Errors for ' + structure)\n",
+    "    ax.set_ylim([0,1200])\n",
     "    #ax.legend(title='Error color')\n",
     "    plt.close()\n",
-    "    outpath = os.path.join(distancepath, f'{structure}_error.png')\n",
+    "    outpath = os.path.join(distancepath, f'{structure}_error.pdf')\n",
     "    fig.savefig(outpath, bbox_inches=\"tight\")\n"
    ]
   },
