--- a/src/atlas/notebooks/landmark-registration-analytical.ipynb
+++ b/src/atlas/notebooks/landmark-registration-analytical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,20 +130,65 @@
        "37"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(allen_point_dict)"
+    "len(moving_point_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n=37, min=25.450888000224076 max=972.47115895537, mean=245.29979010644993\n",
+      "PBG_L distance from Allen=25.45 micrometers\n",
+      "VLL_L distance from Allen=31.01 micrometers\n",
+      "IC distance from Allen=55.84 micrometers\n",
+      "7N_R distance from Allen=56.93 micrometers\n",
+      "7N_L distance from Allen=65.45 micrometers\n",
+      "PBG_R distance from Allen=110.85 micrometers\n",
+      "SNC_L distance from Allen=111.15 micrometers\n",
+      "SNC_R distance from Allen=117.04 micrometers\n",
+      "5N_L distance from Allen=119.65 micrometers\n",
+      "Sp5I_R distance from Allen=128.85 micrometers\n",
+      "Sp5O_R distance from Allen=152.38 micrometers\n",
+      "Sp5I_L distance from Allen=160.27 micrometers\n",
+      "4N_L distance from Allen=175.32 micrometers\n",
+      "Sp5C_L distance from Allen=186.85 micrometers\n",
+      "LRt_L distance from Allen=202.76 micrometers\n",
+      "DC_L distance from Allen=205.27 micrometers\n",
+      "Amb_L distance from Allen=211.9 micrometers\n",
+      "5N_R distance from Allen=213.55 micrometers\n",
+      "4N_R distance from Allen=216.75 micrometers\n",
+      "LRt_R distance from Allen=224.4 micrometers\n",
+      "3N_L distance from Allen=226.0 micrometers\n",
+      "6N_L distance from Allen=248.35 micrometers\n",
+      "3N_R distance from Allen=256.6 micrometers\n",
+      "Sp5O_L distance from Allen=266.36 micrometers\n",
+      "SC distance from Allen=267.43 micrometers\n",
+      "SNR_R distance from Allen=268.35 micrometers\n",
+      "SNR_L distance from Allen=269.18 micrometers\n",
+      "6N_R distance from Allen=282.57 micrometers\n",
+      "DC_R distance from Allen=288.04 micrometers\n",
+      "Amb_R distance from Allen=327.57 micrometers\n",
+      "LC_L distance from Allen=368.66 micrometers\n",
+      "AP distance from Allen=399.42 micrometers\n",
+      "LC_R distance from Allen=442.65 micrometers\n",
+      "7n_R distance from Allen=443.89 micrometers\n",
+      "7n_L distance from Allen=482.58 micrometers\n",
+      "VLL_R distance from Allen=494.26 micrometers\n",
+      "RtTg distance from Allen=972.47 micrometers\n"
+     ]
+    }
+   ],
    "source": [
     "distances = []\n",
     "sortme = {}\n",
@@ -175,23 +220,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "305.69115497574603\n",
-      "[[ 0.99841862  0.05440934  0.01413803]\n",
-      " [-0.05530431  0.99576765  0.07340454]\n",
-      " [-0.0100843  -0.07407036  0.99720203]]\n",
-      "[[-3368.22446259]\n",
-      " [-2445.98352834]\n",
-      " [ 1365.58366407]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(RMSD, R1, t1, _) = Superpose3D(allen_points, moving_points, allow_rescale=True)\n",
     "t1 = t1.reshape(3,1)\n",
@@ -211,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,42 +251,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-3368.22446259],\n",
-       "       [-2445.98352834],\n",
-       "       [ 1365.58366407]])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(37, 1)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "n, a1, a2 = cv2.estimateAffine3D(src=moving_points, dst=allen_points)\n",
     "a2.shape\n"
@@ -263,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,27 +280,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 1)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t3.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,26 +321,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean\n",
-      "[10463.46540541  5123.43756757  5645.72054054]\n",
-      "[10463.46540541  5123.43756757  5645.72054054]\n",
-      "[10550.77583933  5026.79981405  5667.99930089]\n",
-      "Min\n",
-      "[8354.09 2325.   3229.  ]\n",
-      "[8068.25945013 2524.03061144 3263.66670863]\n",
-      "Max\n",
-      "[12832.54  6990.91  8156.39]\n",
-      "[13297.21697261  6871.63404678  8156.27022824]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Mean')\n",
     "print(np.mean(allen_points, axis=0))\n",
@@ -369,55 +348,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3N_L COM=[9056. 3971. 5621.] distance=208.25 cv2=296.53\n",
-      "3N_R COM=[9095. 4021. 5897.] distance=229.6 cv2=282.76\n",
-      "4N_L COM=[9588. 4017. 5449.] distance=239.67 cv2=300.26\n",
-      "4N_R COM=[9558. 4063. 5984.] distance=291.41 cv2=250.64\n",
-      "5N_L COM=[10160.  5207.  4194.] distance=134.13 cv2=77.43\n",
-      "5N_R COM=[10096.  5155.  7184.] distance=195.83 cv2=184.3\n",
-      "6N_L COM=[10782.  5309.  5256.] distance=100.62 cv2=72.85\n",
-      "6N_R COM=[10783.  5371.  6020.] distance=172.96 cv2=126.18\n",
-      "7N_L COM=[10767.  6484.  4477.] distance=333.08 cv2=266.88\n",
-      "7N_R COM=[11367.  6578.  7057.] distance=550.8 cv2=475.5\n",
-      "7n_L COM=[10551.  5651.  4532.] distance=277.45 cv2=394.57\n",
-      "7n_R COM=[10549.  5624.  6809.] distance=238.06 cv2=325.84\n",
-      "AP COM=[12736.  5530.  5510.] distance=556.23 cv2=248.77\n",
-      "Amb_L COM=[11672.  6404.  4294.] distance=302.4 cv2=340.8\n",
-      "Amb_R COM=[11692.  6237.  7010.] distance=428.44 cv2=345.68\n",
-      "DC_L COM=[11329.  4913.  3264.] distance=112.3 cv2=392.85\n",
-      "DC_R COM=[11068.  4791.  8156.] distance=292.3 cv2=631.5\n",
-      "IC COM=[10574.  2579.  5728.] distance=311.84 cv2=1109.45\n",
-      "LC_L COM=[10583.  4602.  4754.] distance=349.09 cv2=0.0\n",
-      "LC_R COM=[10556.  4625.  6575.] distance=386.94 cv2=0.0\n",
-      "LRt_L COM=[12505.  6872.  4399.] distance=199.73 cv2=224.0\n",
-      "LRt_R COM=[12489.  6750.  6860.] distance=310.65 cv2=0.0\n",
-      "PBG_L COM=[9540. 3799. 3720.] distance=222.23 cv2=644.63\n",
-      "PBG_R COM=[9437. 3899. 7773.] distance=88.05 cv2=554.26\n",
-      "RtTg COM=[9153. 5527. 5548.] distance=430.65 cv2=592.94\n",
-      "SC COM=[9204. 2524. 5764.] distance=166.53 cv2=1003.67\n",
-      "SNC_L COM=[8182. 4905. 4394.] distance=296.57 cv2=0.0\n",
-      "SNC_R COM=[8068. 4867. 7175.] distance=393.52 cv2=172.52\n",
-      "SNR_L COM=[8463. 4954. 4267.] distance=318.73 cv2=222.96\n",
-      "SNR_R COM=[8365. 4961. 7236.] distance=249.01 cv2=148.98\n",
-      "Sp5C_L COM=[13297.  6146.  4061.] distance=533.94 cv2=357.39\n",
-      "Sp5I_L COM=[12464.  5889.  3697.] distance=360.99 cv2=278.5\n",
-      "Sp5I_R COM=[12413.  5801.  7535.] distance=330.76 cv2=376.04\n",
-      "Sp5O_L COM=[11200.  5870.  3783.] distance=73.96 cv2=120.48\n",
-      "Sp5O_R COM=[11130.  5790.  7519.] distance=146.41 cv2=102.37\n",
-      "VLL_L COM=[9406. 4873. 3900.] distance=308.18 cv2=313.58\n",
-      "VLL_R COM=[9274. 5009. 7484.] distance=252.27 cv2=170.73\n",
-      "n=37, min=73.96104936485453 max=556.2263085262663, mean=280.90775698109377\n",
-      "n=37, min=0.00028719861849095914 max=1109.4484884646504, mean=308.2663623400882\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "distances = []\n",
     "distances2 = []\n",
