Added more parameters to register volume

--- a/src/atlas/notebooks/allen.atlas.comparison.ipynb
+++ b/src/atlas/notebooks/allen.atlas.comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,50 +17,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_distance(com1, com2):\n",
-    "    return (np.linalg.norm(com1 - com2))"
+    "    return (np.linalg.norm(com1 - com2))\n",
+    "def pad_volume(volume, padto):\n",
+    "    rdiff = padto[2] - volume.shape[2]\n",
+    "    cdiff = padto[1] - volume.shape[1]\n",
+    "    print(rdiff,cdiff)    \n",
+    "    cs = 0\n",
+    "    ce = cdiff\n",
+    "    rs = 0\n",
+    "    re = rdiff\n",
+    "    return np.pad(volume, [[0, 0], [cs, ce], [rs, re]], constant_values=(0))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "csvpath = '/net/birdstore/Active_Atlas_Data/data_root/atlas_data/atlasV8/csv'\n",
-    "distancepath = '/net/birdstore/Active_Atlas_Data/data_root/atlas_data/atlasV8/distance/pdf'\n",
+    "distancepath = '/net/birdstore/Active_Atlas_Data/data_root/atlas_data/atlasV8/distance'\n",
     "atlaspath = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(dtype('uint16'), (456, 320, 528))"
+       "(dtype('uint16'), (456, 370, 628))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "allen_path = os.path.join(atlaspath, 'allen_25um_sagittal_reference.tif')\n",
+    "allen_path = os.path.join(atlaspath, 'Allen_25um_sagittal.tif')\n",
     "allen_img = io.imread(allen_path)\n",
     "allen_img.dtype, allen_img.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(dtype('uint8'), (447, 586, 790))"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inpath = os.path.join(atlaspath, 'MD589_25um_sagittal.tif')\n",
+    "MD589_img = io.imread(inpath)\n",
+    "MD589_img.dtype, MD589_img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "162 216\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_726582/2436053990.py:3: UserWarning: /net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/Allen_25um_sagittal.tif is a low contrast image\n",
+      "  io.imsave(savepath, padded)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(456, 586, 790)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "padded = pad_volume(allen_img, MD589_img.shape)\n",
+    "savepath = os.path.join(atlaspath, 'Allen_25um_sagittal.tif')\n",
+    "io.imsave(savepath, padded)\n",
+    "padded.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,16 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_midbrain_allen' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[48], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mlen\u001b[39m(\u001b[43mdf_midbrain_allen\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_midbrain_allen' is not defined"
+     ]
+    }
+   ],
    "source": [
     "len(df_midbrain_allen)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +193,7 @@
     "    title += f'  distance={round(distance,2)} um'\n",
     "    plt.title(title)\n",
     "    ax = plt.gca()\n",
-    "    ax.set_xlim([300, 600])\n",
+    "    ax.set_xlim([0, 600])\n",
     "    plt.scatter(x1/25, y1/25, s=40, marker='^', c='b', label=str('Allen ' + structure))\n",
     "    plt.scatter(x2/25, y2/25, s=40, marker='o', c='g', label=str('Atlas ' + structure))\n",
     "    plt.imshow(slice, cmap='gray')\n",
@@ -126,20 +207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.25])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "width = 0.25  # the width of the bars\n",
     "multiplier = 0\n",
@@ -149,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,165 +262,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "n=37, min=98.23399070148605 max=1182.6365323228192, mean=443.2248796323675\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/PBG_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/PBG_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/IC.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/IC_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/SNC_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/SNC_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/4N_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/4N_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/SNR_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/SNR_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/LC_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/LC_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/LC_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/LC_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/3N_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/3N_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/SC.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/SC_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/4N_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/4N_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/PBG_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/PBG_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/3N_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/3N_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/SNR_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/SNR_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/VLL_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/VLL_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/SNC_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/SNC_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/7n_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/7n_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/5N_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/5N_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/RtTg.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/RtTg_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/5N_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/5N_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/6N_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/6N_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/6N_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/6N_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/7n_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/7n_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/VLL_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/VLL_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/DC_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/DC_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/DC_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/DC_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/Sp5O_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/Sp5O_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/Sp5O_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/Sp5O_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/AP.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/AP_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/7N_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/7N_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/Amb_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/Amb_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/Amb_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/Amb_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/Sp5I_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/Sp5I_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/LRt_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/LRt_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/Sp5I_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/Sp5I_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/Sp5C_L.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/Sp5C_L_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/LRt_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/LRt_R_error.png\"></td>\n",
-      "</tr>\n",
-      "<tr>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/7N_R.png\"></td>\n",
-      "<td><img src=\"https://www.brainsharer.org/images/7N_R_error.png\"></td>\n",
-      "</tr>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'n={len(distances)}, min={min(distances)} max={max(distances)}, mean={np.mean(distances)}')\n",
     "ds = {k: v for k, v in sorted(sortme.items(), key=lambda item: item[1])}\n",
@@ -365,24 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "savepath = os.path.join(atlaspath, 'allen_25um_sagittal_reference.tif')\n",
-    "io.imsave(savepath, sagittal)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
